# plant-monitor

./: .gitignore  README.md
data-monitor/: CMakeLists.txt  Makefile  Makefile.inc  collector.cpp  echo.cpp  monitor.cpp
design/: pcb-component-placement.ai
layout/: plant-monitor.brd  plant-monitor.pro  plant-monitor.sch
sensor/sensor-arduino/minimal-radio-test/: minimal-radio-test.ino
sensor/sensor-arduino/moisture-receive/: moisture-receive.ino
sensor/sensor-arduino/moisture-send/: moisture-send.ino
sensor/sensor-arduino/sensor/: sensor.ino
sensor/sensor-arduino/sensor/Monitor/: Monitor.cpp  Monitor.h
sensor/sensor-arduino/sensor/Monitor/Temp/: Temp.cpp  Temp.h
sensor/sensor-arduino/sensor/Registry/: Registry.cpp  Registry.h
sensor/sensor-arduino/test-attiny84-low-power/: test-attiny84-low-power.ino
sensor/sensor-arduino/test-nrf24L01/: test-nrf24L01.ino
sensor/sensor-arduino/test-nrf24L01-attiny/: test-nrf24L01-attiny.ino
sensor/sensor-avr/: CMakeLists.txt  Makefile  main.c  main.h  nrf24.c  nrf24.h  radioPinFunctions.c  radioPinFunctions.h
